--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"  crossorigin="anonymous" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin  crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap" rel="stylesheet"  crossorigin="anonymous" />
-  <link href="/main.ed578403dafcefc45fac.css" rel="stylesheet"></head>
+  <link href="./main.ed578403dafcefc45fac.css" rel="stylesheet"></head>
 
   <body>
     
@@ -28,5 +28,5 @@
     </main>
 
 
-  <script defer src="/main.decb3eca389760bcbf7f.js"></script></body>
+  <script defer src="./main.decb3eca389760bcbf7f.js"></script></body>
 </html>
