--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"  crossorigin="anonymous" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin  crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap" rel="stylesheet"  crossorigin="anonymous" />
-  <link href="./main.0acbc8993eb28f03ef6c.css" rel="stylesheet"></head>
+  <link href="/main.0acbc8993eb28f03ef6c.css" rel="stylesheet"></head>
 
   <body>
     
@@ -28,5 +28,5 @@
     </main>
 
 
-  <script defer src="./main.31c3fa4088e22157a6ae.js"></script></body>
+  <script defer src="/main.9c48a8e49f05152664bf.js"></script></body>
 </html>
