--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-.<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -12,11 +12,7 @@
   <link href="./main.0acbc8993eb28f03ef6c.css" rel="stylesheet"></head>
 
   <body>
-    
-
     <main>
-
-
       <div class="graph-header"></div>
       <div id="radar">
         <!-- <p class="no-blip-text">
@@ -26,7 +22,5 @@
       <div class="all-quadrants-mobile show-all-quadrants-mobile"></div>
       <!-- <div class="graph-footer"></div> -->
     </main>
-
-
   <script defer src="./main.8fad9e82f0eebdb2188f.js"></script></body>
 </html>
