--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"  crossorigin="anonymous" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin  crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap" rel="stylesheet"  crossorigin="anonymous" />
-  <link href="./main.0acbc8993eb28f03ef6c.css" rel="stylesheet"></head>
+  <link href="/main.0acbc8993eb28f03ef6c.css" rel="stylesheet"></head>
 
   <body>
     <main>
       <div class="graph-header"></div>
       <div id="radar">
-        <!-- <p class="no-blip-text">
-          There are no blips on this quadrant, please check your Google sheet/CSV/JSON file once.
-        </p> -->
       </div>
       <div class="all-quadrants-mobile show-all-quadrants-mobile"></div>
-      <!-- <div class="graph-footer"></div> -->
     </main>
-  <script defer src="./main.8fad9e82f0eebdb2188f.js"></script></body>
+  <script defer src="/main.51a75da9716089bc757f.js"></script></body>
 </html>
