--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"  crossorigin="anonymous" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin  crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap" rel="stylesheet"  crossorigin="anonymous" />
-  <link href="/main.0acbc8993eb28f03ef6c.css" rel="stylesheet"></head>
+  <link href="./main.0acbc8993eb28f03ef6c.css" rel="stylesheet"></head>
 
   <body>
     <main>
@@ -18,5 +18,5 @@
       </div>
       <div class="all-quadrants-mobile show-all-quadrants-mobile"></div>
     </main>
-  <script defer src="/main.8712767621024c555677.js"></script></body>
+  <script defer src="./main.8712767621024c555677.js"></script></body>
 </html>
