See https://github.com/lgtits/customRadar/commit/8f61f57fa4dde76f0cc5cdde9eaf646c7841a5c5 from refs/heads/main

--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link href="/images/favicon.ico" rel="icon"  crossorigin="anonymous"/>
-    <link rel="preconnect" href="https://rsms.me/"  crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" integrity="sha512-byor"  crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"  crossorigin="anonymous" /> -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin  crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap" rel="stylesheet"  crossorigin="anonymous" />
-  <link href="./main.0acbc8993eb28f03ef6c.css" rel="stylesheet"></head>
-
-  <body>
-    <main>
-      <div class="graph-header"></div>
-      <div id="radar">
-      </div>
-      <div class="all-quadrants-mobile show-all-quadrants-mobile"></div>
-    </main>
-  <script defer src="./main.d05a5d45231b213d1bce.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin crossorigin="anonymous"/><link href="https://fonts.googleapis.com/css2?family=Bitter:wght@700&display=swap" rel="stylesheet" crossorigin="anonymous"/><link href="./main.1e8e9ea31efa35ae9b8a.css" rel="stylesheet"></head><body><main><div class="graph-header"></div><div id="radar"></div><div class="all-quadrants-mobile show-all-quadrants-mobile"></div></main><script defer="defer" src="./main.90c3e5d7454e6c4b4e86.js"></script></body></html>
